formatting and commentry

--- a/mapp/client/gater.html
+++ b/mapp/client/gater.html
@@ -3,13 +3,15 @@
 </head>
 
 <body>
-  <h1>Welcome to this thing!</h1>
+  <h1>Welcome to this webpage text scraper!</h1>
 
   {{> hello}}
 </body>
 
 <template name="hello">
   <input type="text" placeholder="url">
-  <button>Click to get html</button>
+  <button>Click to get html texts</button>
+
+  <!-- The p element below will have the html texts injected into it -->
   <p></p>
 </template>
